Correct alignment property in #REZERO style
Fix typo in alignment property for #REZERO.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 #REZERO{
     display: flex;
     justify-content: center;
+    allign-items: center;
 }
 /* Styling for knapp */
 button {
